@@ -1,5 +1,10 @@
 2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* AssemblyInfo.cs:
+	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.
+
+2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* gtk-gui/generated.cs:
 	* MonoDevelop.XmlEditor.mdp:
 	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs:
